<resources>
    <string name="app_name">Fredagsdrinken 1.0</string>
    <string name="blandadrinkar">Blanda drinkar</string>
    <string name="utforskadrinkar">Utforska drinkar</string>
    <string name="apelsin">Apelsin</string>
    <string name="citron">Citron</string>
    <string name="cocacola">Coca Cola</string>
    <string name="galliano">Galliano</string>
    <string name="grädde">Grädde</string>
    <string name="is">Is</string>
    <string name="kaffe">Kaffe</string>
    <string name="kahlua">Kahlua</string>
    <string name="lime">Lime</string>
    <string name="ljusrom">Ljus Rom</string>
    <string name="mjolk">Mjölk</string>
    <string name="sodavatten">Sodavatten</string>
    <string name="strosocker">Strösocker</string>
    <string name="te">Te</string>
    <string name="vatten">Vatten</string>
    <string name="vodka">Vodka</string>
    <string name="apple">Äpple</string>
    <string name="nasta">Nästa</string>
    <string name="hemmaingredienser">Vad har du redan hemma?</string>
    <string name="iste">Iste från södern</string>
    <string name="cubalibre">Cuba Libre</string>
    <string name="whiterussian">White Russian</string>
    <string name="skinnybitch">Skinny Bitch</string>
    <string name="hotshot">Hot Shot</string>
    <string name="mojito">Mojito</string>
    <string name="textView5"></string>
    <string name="textView6"></string>
    <string name="textView7"></string>
    <string name="textView8"></string>
    <string name="textView9"></string>
    <string name="textView10"></string>
    <string name="receptSB">1. Fyll ett glas med isbitar.\n2. Lägg till alla ingredienser.\n3. Pressa ned lime.</string>
<<<<<<< HEAD
    <string name="ingridSB">4 cl vodka\n10 cl sodavatten\n2 st limeklyftor</string>
    <string name="receptiste">1. Koka upp vatten och brygg starkt te. Häll i socker och rör tills det löser sig.\n2. Tvätta citron, apelsin och äpple och skiva tunt.\n3. Lägg frukten i en glaskaraff och fyll på med te. Ställ in kylen och låt svalna i cirka två timmar.\n4. Ta ut det kalla teet ur kylen, fyll på kannan med isbitar och eventuellt lite kallt vatten.</string>
    <string name="ingridiste">Is\n1l vatten\n2 msk te\n2 msk strösocker\n1 st citron\n1 st apelsin\n1 st äpple</string>
=======
    <string name="ingridSB">4 cl Vodka\n10 cl Sodavatten\n2 st Limeklyftor </string>
    <string name="receptHS">1. Skiktas med hjälp av sked. </string>
    <string name="ingridHS">2,5 cl Galliano \n2,5 cl Kaffe, hett \nGrädde, vispad</string>
    <string name="receptWR">1. Fyll glaset med is. \n2. Häll på vodka och kalúha. \n3. Fyll upp med mjölk och rör om.</string>
    <string name="ingridWR">Is \n10 cl Mjölk \n3 cl Vodka \n3 cl Kahlúa</string>
    <string name="receptCL">1. Fyll ett grogglas med krossad is. \n2. Häll i rom och cola, rör om.
        \n3. Pressa Limeklyftor över toppen och lägg därefter skalen i glaset, rör om igen. \n4. Servera med sugrör.</string>
    <string name="ingridCL">Is \n2 st Limeklyftor \n10 cl Coca cola \n4 cl Ljus rom </string>
    <string name="receptm">1. Häll sockerlag och limejuice i ett highball glas. Mortla myntan i limeblandningen.
        \n2. Fyll på med ljus rom,rikligt med is och toppa med sodavatten. \n3. Garnera med myntakvist.</string>
    <string name="ingridm">1/2 Lime \n6 cl Vit rom \n1 msk Sockerlag \n6 st Myntablad</string>


>>>>>>> 0877554295f23742133dabeb1e0f59dcf47edfe7

</resources>
