<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#f38630"
    tools:context=".meny2">

    <ScrollView
        android:id="@+id/ScrollView3"
        android:layout_width="395dp"
        android:layout_height="494dp"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginTop="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <Button
                android:id="@+id/Alternativ1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:layout_marginEnd="8dp"
                android:layout_marginLeft="8dp"
                android:layout_marginRight="8dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:text="@string/iste"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.174" />

            <Button
                android:id="@+id/Alternativ4"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:layout_marginEnd="8dp"
                android:layout_marginLeft="8dp"
                android:layout_marginRight="8dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:text="@string/skinnybitch"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.174" />

            <Button
                android:id="@+id/Alternativ2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:layout_marginEnd="8dp"
                android:layout_marginLeft="8dp"
                android:layout_marginRight="8dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:text="@string/cubalibre"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.174" />

            <Button
                android:id="@+id/Alternativ3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:layout_marginEnd="8dp"
                android:layout_marginLeft="8dp"
                android:layout_marginRight="8dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:text="@string/whiterussian"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.174" />

            <Button
                android:id="@+id/Alternativ5"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:layout_marginEnd="8dp"
                android:layout_marginLeft="8dp"
                android:layout_marginRight="8dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:text="@string/hotshot"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.174" />

            <Button
                android:id="@+id/Alternativ6"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:layout_marginEnd="8dp"
                android:layout_marginLeft="8dp"
                android:layout_marginRight="8dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:text="@string/mojito"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.174" />

        </LinearLayout>
    </ScrollView>

    <ScrollView
        android:id="@+id/ScrollView2"
        android:layout_width="395dp"
        android:layout_height="494dp"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginTop="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <CheckBox
                android:id="@+id/checkBox26"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/iste"
                android:textSize="30sp" />

            <CheckBox
                android:id="@+id/checkBox27"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/cubalibre"
                android:textSize="30sp" />

            <CheckBox
                android:id="@+id/checkBox28"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/whiterussian"
                android:textSize="30sp" />

            <CheckBox
                android:id="@+id/checkBox29"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/skinnybitch"
                android:textSize="30sp" />

            <CheckBox
                android:id="@+id/checkBox30"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/hotshot"
                android:textSize="30sp" />

            <CheckBox
                android:id="@+id/checkBox31"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/mojito"
                android:textSize="30sp" />
        </LinearLayout>
    </ScrollView>

    <LinearLayout
        android:layout_width="47dp"
        android:layout_height="482dp"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/ScrollView1"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.476">

        <TextView
            android:id="@+id/textView5"
            android:layout_width="match_parent"
            android:layout_height="41dp"
            android:text="@string/textView5" />

        <TextView
            android:id="@+id/textView6"
            android:layout_width="89dp"
            android:layout_height="41dp"
            android:text="@string/textView6" />

        <TextView
            android:id="@+id/textView7"
            android:layout_width="match_parent"
            android:layout_height="41dp"
            android:text="@string/textView7" />

        <TextView
            android:id="@+id/textView8"
            android:layout_width="match_parent"
            android:layout_height="41dp"
            android:text="@string/textView8" />

        <TextView
            android:id="@+id/textView9"
            android:layout_width="match_parent"
            android:layout_height="41dp"
            android:text="@string/textView9" />

        <TextView
            android:id="@+id/textView10"
            android:layout_width="match_parent"
            android:layout_height="41dp"
            android:text="@string/textView10" />

    </LinearLayout>

    <ScrollView
        android:id="@+id/ScrollView1"
        android:layout_width="395dp"
        android:layout_height="494dp"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginTop="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <CheckBox
                android:id="@+id/checkBox9"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:lineSpacingExtra="20sp"
                android:text="@string/apelsin"
                android:textSize="30sp" />

            <CheckBox
                android:id="@+id/checkBox10"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:lineSpacingExtra="20sp"
                android:text="@string/citron"
                android:textSize="30sp" />

            <CheckBox
                android:id="@+id/checkBox11"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:lineSpacingExtra="20sp"
                android:text="@string/cocacola"
                android:textSize="30sp" />

            <CheckBox
                android:id="@+id/checkBox12"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:lineSpacingExtra="20sp"
                android:text="@string/galliano"
                android:textSize="30sp" />

            <CheckBox
                android:id="@+id/checkBox13"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/grädde"
                android:textSize="30sp" />

            <CheckBox
                android:id="@+id/checkBox21"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/is"
                android:textSize="30sp" />

            <CheckBox
                android:id="@+id/checkBox25"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/kaffe"
                android:textSize="30sp" />

            <CheckBox
                android:id="@+id/checkBox24"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/kahlua"
                android:textSize="30sp" />

            <CheckBox
                android:id="@+id/checkBox23"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/lime"
                android:textSize="30sp" />

            <CheckBox
                android:id="@+id/checkBox14"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/ljusrom"
                android:textSize="30sp" />

            <CheckBox
                android:id="@+id/checkBox22"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/mjolk"
                android:textSize="30sp" />

            <CheckBox
                android:id="@+id/checkBox15"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/sodavatten"
                android:textSize="30sp" />

            <CheckBox
                android:id="@+id/checkBox20"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/strosocker"
                android:textSize="30sp" />

            <CheckBox
                android:id="@+id/checkBox16"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/te"
                android:textSize="30sp" />

            <CheckBox
                android:id="@+id/checkBox19"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/vatten"
                android:textSize="30sp" />

            <CheckBox
                android:id="@+id/checkBox17"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/vodka"
                android:textSize="30sp" />

            <CheckBox
                android:id="@+id/checkBox18"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/apple"
                android:textSize="30sp" />
            -->

        </LinearLayout>
    </ScrollView>

    <Button
        android:id="@+id/nasta1"
        style="@style/Widget.AppCompat.Button.Borderless"
        android:layout_width="112dp"
        android:layout_height="68dp"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:background="#a7dbd8"
        android:text="@string/nasta"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.904"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.962" />

    <Button
        android:id="@+id/nasta2"
        style="@style/Widget.AppCompat.Button.Borderless"
        android:layout_width="112dp"
        android:layout_height="68dp"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:background="#a7dbd8"
        android:text="@string/nasta"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.904"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.962" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="294dp"
        android:layout_height="59dp"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:text="@string/hemmaingredienser"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.46"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.056" />

</android.support.constraint.ConstraintLayout>