<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/blackmarble"
    tools:context=".Iste">

    <ScrollView
        android:id="@+id/scrollView2"
        android:layout_width="471dp"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <android.support.constraint.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ImageView
                android:id="@+id/imageView4"
                android:layout_width="412dp"
                android:layout_height="412dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:srcCompat="@drawable/iste" />

            <TextView
                android:id="@+id/textView2"
                android:layout_width="432dp"
                android:layout_height="37dp"
                android:layout_marginLeft="20dp"
                android:layout_marginStart="20dp"
                android:layout_marginTop="440dp"
                android:text="@string/iste"
                android:textColor="#f9ece4"
                android:textSize="30sp"
                app:fontFamily="serif"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <ImageView
                android:id="@+id/imageView7"
                android:layout_width="380dp"
                android:layout_height="630dp"
                android:layout_marginBottom="20dp"
                android:layout_marginEnd="9dp"
                android:layout_marginLeft="9dp"
                android:layout_marginRight="9dp"
                android:layout_marginStart="9dp"
                android:layout_marginTop="500dp"
                android:adjustViewBounds="false"
                android:background="#f9ece4"
                android:cropToPadding="false"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.082"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="@+id/imageView4"
                app:layout_constraintVertical_bias="0.0" />

            <TextView
                android:id="@+id/textView12"
                android:layout_width="wrap_content"
                android:layout_height="34dp"
                android:layout_marginLeft="16dp"
                android:layout_marginStart="16dp"
                android:layout_marginTop="516dp"
                android:text="Ingredienser"
                android:textColor="@android:color/black"
                android:textSize="24sp"
                app:layout_constraintStart_toStartOf="@+id/imageView7"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/textView13"
                android:layout_width="137dp"
                android:layout_height="253dp"
                android:layout_marginLeft="16dp"
                android:layout_marginStart="16dp"
                android:layout_marginTop="548dp"
                android:lineSpacingExtra="8sp"
                android:text="@string/ingridiste"
                android:textColor="@android:color/black"
                android:textSize="18sp"
                app:layout_constraintStart_toStartOf="@+id/imageView7"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/textView14"
                android:layout_width="130dp"
                android:layout_height="36dp"
                android:layout_marginLeft="16dp"
                android:layout_marginStart="16dp"
                android:layout_marginTop="792dp"
                android:text="Gör så här"
                android:textColor="@android:color/black"
                android:textSize="24sp"
                app:layout_constraintStart_toStartOf="@+id/imageView7"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/textView15"
                android:layout_width="349dp"
                android:layout_height="294dp"
                android:layout_marginEnd="8dp"
                android:layout_marginLeft="8dp"
                android:layout_marginRight="8dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="328dp"
                android:lineSpacingExtra="8sp"
                android:text="@string/receptiste"
                android:textColor="@android:color/black"
                android:textSize="18sp"
                app:layout_constraintEnd_toEndOf="@+id/imageView7"
                app:layout_constraintHorizontal_bias="0.533"
                app:layout_constraintStart_toStartOf="@+id/imageView7"
                app:layout_constraintTop_toTopOf="@+id/imageView7" />
        </android.support.constraint.ConstraintLayout>
    </ScrollView>

    <ImageView
        android:id="@+id/imageView9"
        android:layout_width="413dp"
        android:layout_height="229dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:srcCompat="@drawable/skugga" />

</android.support.constraint.ConstraintLayout>